# mmap-sync-benchmark

./: Cargo.toml  README.md
benches/: mmap_bench.rs
data/: bench_output.txt  mmap_benchmark_data_0  mmap_benchmark_data_1  mmap_benchmark_state
report/control_empty_operations/empty_read/base/: benchmark.json  tukey.json
report/control_empty_operations/empty_read/change/: estimates.json
report/control_empty_operations/empty_read/new/: estimates.json  sample.json
report/control_empty_operations/empty_read/report/: index.html
report/control_empty_operations/empty_write/base/: sample.json
report/control_empty_operations/empty_write/change/: estimates.json
report/control_empty_operations/empty_write/new/: benchmark.json  estimates.json  tukey.json
report/control_empty_operations/empty_write/report/: index.html
report/control_empty_operations/report/: index.html
report/control_memory_baseline/memory_copy/base/: benchmark.json  estimates.json  sample.json  tukey.json
report/control_memory_baseline/memory_copy/change/: estimates.json
report/control_memory_baseline/memory_copy/report/: index.html
report/control_thread_coordination/coordination_overhead/base/: sample.json
report/control_thread_coordination/coordination_overhead/change/: estimates.json
report/control_thread_coordination/coordination_overhead/new/: benchmark.json  estimates.json  tukey.json
report/control_write_scaling/report/: index.html
report/control_write_scaling/write_latency/report/: index.html
report/report/: index.html
src/: lib.rs  main.rs  prepare_testbench.sh
(+55 files in other folders)
