[package]
name = "mmap_benchmark"
version = "1.0.0"
edition = "2024"

[dependencies]
mmap-sync = "2.0.1"
rand = "0.8.5"
rkyv = { version = "0.7", features = ["validation"] }
parking_lot = "0.12.4"
core_affinity = "0.8.3"
thread-priority = "2.1.0"
rand_distr = "0.4.3"
num_cpus = "1.17.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
hdrhistogram = "7.5.4"

[[bench]]
name = "mmap_bench"
harness = false

[lib]
name = "mmap_benchmark"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
lto = "fat"
panic = "abort"

